--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-react-hw-02-feedback",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/VitalinaKovbasiuk/goit-react-hw-02-feedback.git",
+  "homepage": "https://vitalinakovbasiuk.github.io/goit-react-hw-02-feedback/",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
